--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="gs://carsas-3dfce.appspot.com/miniatura2.png" />
+    <link rel="icon" type="image/png" href="/miniatura3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carsas - SuperAuto</title>
   </head>
@@ -12,3 +12,4 @@
      
   </body>
 </html>
+
